<resources>
    <string name="app_name">OOP Calculator</string>
    <string name="currentOOPlbl">Current OOP</string>
    <string name="maxOOPLabel">Maximum OOP</string>
    <string name="coinslbl">Coinsurance % (decimal)</string>
    <string name="allowlbl">Allowable</string>
    <string name="calc">Calculate</string>
    <string name="noOOP">OOP has not been reached.</string>
    <string name="copayDeduc">Copay or Deductible</string>
    <string name="oopMetPerfectly">OOP was met on line.</string>
    <string name="version">Version 0.1</string>
    <string name="versionNote">Really hates leaving fields blank.</string>
</resources>
